assets/css/style.css
/* -- Fonts --*/

@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,500;0,700;1,400;1,500&family=Roboto+Slab:wght@400;500;600;700&display=swap');


/* -- background image -- */

body {
    background: url(../images/background-1.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    overflow-x: hidden;
}

/* -- jumbotron -- */

.jumbotron-style {
    text-align:Center;
    background-color: rgba(0, 0, 0, 0.80);
    margin-bottom: 0;
}

.title {
    font-family: 'Roboto Mono', monospace;
    color: white;
    padding-bottom: 40px;
    text-transform: uppercase;
    font-size: 70px;
}

.title-2 {
    font-family: 'Roboto Mono', monospace;
    color: white;
    padding-bottom: 30px;
    text-decoration: underline;
}

.lead {
    font-family: 'Roboto Slab', serif;
    color: white;
}

.vertical-center {
    min-height: 100vh;
    width: 100%;
    justify-content: center;
    align-items: center;
    display: flex;
}

/* -- Game -- */

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

.game {
    width: 720px;
    height: 800px;
    margin: auto;
    display: flex;
    flex-wrap: wrap;
}

.game-title {
    padding: 20px;
    font-family: 'Roboto Mono', monospace;
    color: white;
    text-transform: uppercase;
    font-size: 70px;
}

a:hover {
    text-decoration: none;
}

.card-bottom {
    background-color: black; 
    width: 690px;
    height: 370px;
    margin-top: 30px;
    text-align: center;
}

.modal-body {
    position: relative;
    -ms-flex: 1 1 auto;
    flex: 1 1 auto;
    padding: 1rem;
    margin: auto;
}

/* -- memory cards -- */

.memory-game {
    width: 640px;
    height: 640px;
    display: flex;
    flex-wrap: wrap;
    margin: auto;
    perspective: 1000px;
    -webkit-perspective: 1000px;
}

.memory-card{
    width: calc(25% - 10px);
    position: relative;
    margin: 5px; 
    transform: scale(1);
    -webkit-transform: scale(1);
    transform-style: preserve-3d;
    -webkit-transform-style: preserve-3d;
    transition: .5s;
    -webkit-transition: .5s;
}

.memory-card:active {
    transform: scale(.97);
    -webkit-transform: scale(.97);
    transition: transform .2s;
    -webkit-transition: transform .2s;
}

.memory-card.flip {
    transform: rotateY(180deg);
    -webkit-transform: rotateY(180deg);
}

.front-face, .back-face {
    width: 100%;
    height: 100%;
    padding: 25px;
    position: absolute;
    border-radius: 25px;
    background: white;
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
}

.front-face {
    transform: rotateY(180deg);
    -webkit-transform: rotateY(180deg);
}

/* -- timer -- */

.timer {
    font-family: 'Roboto Mono', monospace;
    color: white;
    padding-top: 5px;
}

#display {
    color: white;
    font-size: 60px;
    margin-bottom: 10px;
}

@media (max-width: 800px) {

/* -- media query for mobile use -- */

.memory-game {
    width: 350px;
    height: 340px;
    display: flex;
    flex-wrap: wrap;
    margin: auto;
    perspective: 1000px;
}
.game {
    width: 350px;
    height: 600px;
    margin: auto;
    display: flex;
    flex-wrap: wrap;
}

.card-bottom {
    background-color: black;
    width: 320px;
    height: 155px;
    margin-top: 10px;
    text-align: center;
    overflow: hidden;
    border-radius: 25px;
}

.game-title {
    padding: 6px;
    font-family: 'Roboto Mono', monospace;
    color: white;
    text-transform: uppercase;
    font-size: 45px;
}

.timer {
    font-family: 'Roboto Mono', monospace;
    color: white;
    padding-top: 10px;
    font-size: 35px;
    margin: auto;
    text-transform: uppercase;
}

#display {
    color: white;
    font-size: 60px;
    margin-bottom: 20px;
}

.title-2 {
    font-family: 'Roboto Mono', monospace;
    color: white;
    padding-bottom: 8px;
    text-decoration: underline;
    font-size: 25px;
}

.front-face, .back-face {
    width: 100%;
    height: 100%;
    padding: 10px;
    position: absolute;
    border-radius: 25px;
    background: white;
    backface-visibility: hidden;
}

.container-fluid {
    padding: 0px;
}

}

